Mappers fixed ParserService added VesselController exceptions finalized